// GameServer 与 SceneServer交互的proto文件
syntax = "proto3";
package fastjgame;

import "p_enum.proto";
import "p_struct.proto";

// optimize_for (file option): Can be set to SPEED, CODE_SIZE, or LITE_RUNTIME.
option optimize_for=SPEED;

// package属性是为了支持多语言的，在其他语言里，可能就是命名空间，因此建议定义清晰的java包名
option java_package="com.wjybxx.fastjgame.protobuffer";
option java_outer_classname = "p_game_scene";

// 消息的命名格式由团队习惯决定

// gameserver向sceneserver打招呼，期望获得scene的一些基本信息
// 为何要主动告诉scene地址呢，减少scene使用zookeeper的压力
message p_game_local_scene_hello{
	// 服务器id，用于核对
	int32 serverId=1;
	string innerTcpAddress=2;
	string innerSyncRpcAddress=3;
}

// scene返回的信息
message p_game_local_scene_hello_result{
    // 配置(或启动参数)中的支持的区域
    repeated int32 configuredRegions=1;
}

//gameserver向跨服scene进程打招呼
message p_game_cross_scene_hello{
	// 服务器id，用于核对
	int32 serverId=1;
	string innerTcpAddress=2;
	string innerSyncRpcAddress=3;
}

// 跨服scene通知该gameserver我启动了哪些区域
// 跨服场景的region不由gameserver协调(由它们自己协调，抢占zk节点)
message p_game_cross_scene_hello_result{
    repeated int32 activeRegions=1;
}