// GameServer 与 SceneServer交互的proto文件
syntax = "proto3";
package fastjgame;

import "p_enum.proto";
import "p_struct.proto";

// optimize_for (file option): Can be set to SPEED, CODE_SIZE, or LITE_RUNTIME.
option optimize_for=SPEED;

// package属性是为了支持多语言的，在其他语言里，可能就是命名空间，因此建议定义清晰的java包名
option java_package="com.wjybxx.fastjgame.protobuffer";
option java_outer_classname = "p_sync_game_scene";

// game同意scene启动，并启动以下互斥区域
message p_game_command_local_scene_start{
    // 分配给该scene的频道id
    int32 channelId=1;
    // 命令scene启动以下互斥区域
    repeated int32 activeMutexRegions=2;
}

// 上一条信息的响应，表示成功启动了对应的区域
message p_game_command_local_scene_start_result{

}

// game服让scene服启动以下区域，用在宕机处理时。
message p_game_command_scene_active_regions{
    // 让当前进程启动的区域
    repeated int32 activeRegions=2;
}

// 表示scene已处理game发来的启动区域请求
message p_game_command_scene_active_regions_result{

}